cmake_minimum_required(VERSION 3.10)
project (CameraCalibration CXX)
set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set( NAME_SRC main.cpp)
set(CMAKE_PREFIX_PATH "C:/libs/aruco")
find_package(OpenCV REQUIRED)
find_package(aruco REQUIRED)
add_executable(${PROJECT_NAME} ${NAME_SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${aruco_LIBS})
